--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,6 +1,3 @@
-/** {
-  outline: 1px solid red !important;
-}*/
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -33,6 +30,7 @@ form {
   position: fixed;
   width: 256px;
   z-index: -1;
+  will-change:left;
 }
 
 .randomPizzaContainer {
